html/themes/materialize/css/user.css
.user-info {
    margin: -24px -24px 0 -24px;
}


/* Navigation */

.user-info .card-tabs {
    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
}

.user-info .card-tabs .row {
    padding: 0;
    margin: 0;
    margin-bottom: 20px;
}

.user-info .card-tabs .row .col {
    padding: 0;
}

.user-info .card-tabs .tabs li a {
    color: #000000;
    padding: 5px 10px;
    border-bottom: 4px solid transparent;
    -webkit-transition: border 0.5s ease-out;
    -o-transition: border 0.5s ease-out;
    transition: border 0.5s ease-out;
}

.user-info .card-tabs .tabs li a.active,
.user-info .card-tabs .tabs li a:hover {
    color: #000000;
    border-bottom-color: #2A3278;
    background: #FFFFFF;
}


/* Content */

.user-info .content-wrapper {
    overflow: auto;
    height: calc(100vh - 274px);
    padding: 0 24px;
}


/* Image */

.user-info .content-wrapper .user-image button {
    margin-top: 20px;
}

.user-info .content-wrapper .user-image img {
    max-width: 145px;
    max-height: 200px;
    object-fit: cover;
}

.user-image .preview-image img {
    overflow: hidden;
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
}

.user-image .image-action {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: space-around;
    align-items: center;
    justify-content: flex-start;
    margin-top: 20px;
}

.user-image .image-action button {
    margin-right: 20px;
}

.user-image .image-action .file-field {
    margin: 0;
}

.user-image .image-action .file-field .btn-small {
    height: 32.4px;
    line-height: 32.4px;
    font-size: 12px;
}

.user-image .image-action .file-field .file-path-wrapper {
    padding-left: 20px;
}

.user-image .image-action .file-field .file-path-wrapper input {
    margin-bottom: 0;
}


/* Others */

.user-info .content-wrapper .input-field {
    height: 39px;
}

.user-info .content-wrapper .input-field>label {
    font-size: 16px;
}

.user-info .content-wrapper .input-field input,
.user-info .content-wrapper .input-field textarea {
    min-height: 30px;
    height: 30px!important;
    font-size: 12px;
    padding: 0;
}

.user-info .content-wrapper .input-field.certificate {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: flex-end;
    justify-content: flex-start;
    align-items: flex-end;
}

.user-info .content-wrapper .input-field.certificate button {
    height: 30px;
    line-height: 30px;
    /* margin-left: 20px; */
    margin-bottom: 8px;
    background-color: transparent;
    color: #000;
    width: auto;
    text-transform: initial;
}

.user-info .content-wrapper .select-wrapper.disabled input:hover {
    border-bottom: 1px dotted rgba(0, 0, 0, 0.42)!important;
    box-shadow: none!important;
}

.user-info .content-wrapper .select-wrapper {
    margin-bottom: 8px;
}

.user-info .content-wrapper .select-wrapper+label {
    top: 0;
    font-size: 16px;
}

.user-info .content-wrapper .input-field label {
    -webkit-transform: translateY(-14px) scale(0.8);
    transform: translateY(-14px) scale(0.8);
    -webkit-transform-origin: 0 0;
    transform-origin: 0 0;
}

.user-info .content-wrapper .ldap-tree .search-field {
    position: relative;
    margin: 0;
    height: 26px;
}

.user-info .content-wrapper .ldap-tree .search-field i {
    position: absolute;
    top: 6px;
    left: 0;
    font-size: 18px;
}

.user-info .content-wrapper .ldap-tree .search-field input {
    height: 24px;
    width: 90%;
    width: calc(100% - 28px);
    margin: 0;
    margin-left: 28px;
}

.user-info .content-wrapper .acl-member-wrapper {
    height: auto;
}

.user-info .content-wrapper .acl-member-wrapper .acl-member {
    min-height: 129px;
    max-height: 129px;
    margin-block-start: calc(1rem + 10px);
    margin-bottom: calc(1rem + 8px);
}

.user-info .content-wrapper .acl-member-wrapper label {
    font-size: 16px;
    top: -10px;
}

.user-info .content-wrapper .input-field.file-field button {
    height: 30px;
    line-height: 30px;
    margin-right: 20px;
    margin-bottom: 8px;
    background-color: transparent;
    color: #000;
    width: auto;
    text-transform: initial;
}

.user-info .content-wrapper .input-field.add {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: space-between;
    align-items: center;
}

.user-info .content-wrapper .input-field.add .select-wrapper {
    width: 100%;
    margin-bottom: 0;
}

.user-info .content-wrapper .input-field.add button {
    height: 30px;
    line-height: 30px;
    margin-left: 20px;
    margin-bottom: 8px;
    background-color: transparent;
    color: #000;
    width: auto;
    text-transform: initial;
}

.user-info .content-wrapper .input-field.manager input:first-child {
    width: calc(100% - 84px);
}

.user-info .content-wrapper .input-field.manager .icons:not(.prefix) {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: flex-end;
    justify-content: flex-end;
    align-items: flex-end;
    height: 30px;
    line-height: 30px;
    position: absolute;
    right: 0;
    bottom: 8px;
}

.user-info .content-wrapper .input-field.manager .icons i {
    position: absolute;
    bottom: 0;
    left: 0;
    font-size: 18px;
    margin: 0;
}

.user-info .content-wrapper .input-field.manager .icons input {
    width: 18px;
}

.user-info .content-wrapper .input-field.manager .icons:not(.prefix) .icon {
    position: relative;
    height: 30px;
    line-height: 30px;
    min-width: 18px;
    width: auto;
    margin-left: 10px;
}

.user-info .content-wrapper .input-field.manager .icons .icon:last-child {
    margin-left: 0;
}

.user-info .content-wrapper .input-field.manager [type="checkbox"]:not(:checked),
.user-info .content-wrapper .input-field.manager [type="checkbox"]:checked {
    opacity: 1;
}

.user-info .content-wrapper hr+h3 {
    margin-top: 0;
}


/* POSIX/Mail Settings */

.user-info .content-wrapper .card-action.settings {
    justify-content: flex-start;
}

.user-info .content-wrapper .card-action.settings button {
    margin-left: 0;
}

.user-info .content-wrapper .setting .col.s6:first-child {
    padding-right: 20px;
}

.user-info .content-wrapper .setting .col.s6:last-child {
    padding-left: 20px;
}

.user-info [type="checkbox"]+span:not(.lever) {
    font-size: 12px;
    color: #000000;
}

.user-info .account-settings label,
.user-info .leave-settings label {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 10px;
}


/* POSIX Settings */

.user-info .account-settings label input {
    width: auto;
    max-width: 100px;
    text-align: center;
}

.user-info .account-settings label span input[type=text]:not(.browser-default) {
    min-height: 24px;
    height: 24px!important;
    font-size: 12px;
    padding: 0;
    margin-bottom: 0;
}

.user-info .account-settings .inline-date-picker .input-field i {
    font-size: 18px;
    margin-left: 10px;
    margin-top: 6px;
}

.user-info .account-settings .inline-date-picker .input-field.inline {
    vertical-align: unset;
    margin-top: 0;
    height: 25px;
}


/* Mail Settings */

.user-info .contingent .list {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    align-items: center;
    justify-content: flex-start;
}

.user-info .contingent label {
    font-size: 12px;
    color: #000000;
}

.user-info .contingent label span {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    align-items: center;
    justify-content: flex-start;
}

.user-info .contingent label span input[type=text]:not(.browser-default) {
    max-width: 200px;
    width: auto;
    min-height: 30px;
    height: 30px!important;
    font-size: 12px;
    padding: 0;
    margin-right: 5px;
    margin-left: 5px;
}

.user-info .leave-notification {
    margin-left: 35px;
}

.user-info .leave-notification textarea {
    max-width: 100%;
}

.user-info .leave-settings .spam-option {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    align-items: flex-start;
    justify-content: flex-start;
}

.user-info .leave-settings .spam-option .row {
    width: calc(100% - 35px);
}

.user-info .leave-settings .spam-option .row .col.s6 {
    margin-top: 0;
}

.user-info .leave-settings .spam-option .row .col.s6 label {
    min-width: 300px;
    width: max-content;
    left: 0;
}

.user-info .leave-settings .forward-messages {
    position: relative;
}

.user-info .leave-settings .forward-messages button {
    white-space: nowrap;
}

.user-info .leave-settings .forward-messages .move-in {
    margin-left: 35px;
}

